DS-2881 Bug fix to display saved searches on Safari.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,10 @@
   overflow: hidden;
 }
 
+.app-sidenav {
+  bottom: unset;
+}
+
 @media screen and (max-width: 800px) {
   .tophat-offset {
     top: 40px;
