--- a/src/app/components/shared/saved-searches/saved-searches.component.scss
+++ b/src/app/components/shared/saved-searches/saved-searches.component.scss
@@ -1,9 +1,9 @@
 @import "asf-theme";
 
 .saved-searches {
-  height: 100%;
+  //height: 100%;
   left: 0;
-  position: fixed;
+  position: static;
   top: 32px;
   width: 30%;
   min-width: 500px;
